@@ -1,4 +1,4 @@
-/*	$NetBSD: sys-bsd.c,v 1.34.4.1 2000/09/30 06:21:45 simonb Exp $	*/
+/*	$NetBSD: sys-bsd.c,v 1.34.4.2 2002/09/04 00:56:02 itojun Exp $	*/
 
 /*
  * sys-bsd.c - System-dependent procedures for setting up
@@ -27,7 +27,7 @@
 #if 0
 #define RCSID	"Id: sys-bsd.c,v 1.46 1999/08/13 06:46:18 paulus Exp "
 #else
-__RCSID("$NetBSD: sys-bsd.c,v 1.34.4.1 2000/09/30 06:21:45 simonb Exp $");
+__RCSID("$NetBSD: sys-bsd.c,v 1.34.4.2 2002/09/04 00:56:02 itojun Exp $");
 #endif
 #endif
 
@@ -907,6 +907,8 @@ wait_input(timo)
 void add_fd(fd)
     int fd;
 {
+    if (fd >= FD_SETSIZE)
+	fatal("descriptor too big");
     FD_SET(fd, &in_fds);
     if (fd > max_in_fd)
 	max_in_fd = fd;
@@ -935,6 +937,8 @@ wait_loop_output(timo)
     int n;
 
     FD_ZERO(&ready);
+    if (loop_master >= FD_SETSIZE)
+	fatal("descriptor too big");
     FD_SET(loop_master, &ready);
     n = select(loop_master + 1, &ready, NULL, &ready, timo);
     if (n < 0 && errno != EINTR)
